// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route testing  '/' renders login page (landing). 1`] = `
<a
  href="#/"
  onClick={[Function]}
/>
`;

exports[`Route testing  '/add_house' renders add house page. 1`] = `
<a
  href="#/add_house"
  onClick={[Function]}
/>
`;

exports[`Route testing  '/main' renders main page. 1`] = `
<a
  href="#/main"
  onClick={[Function]}
/>
`;

exports[`Route testing  '/register' renders registration page.' 1`] = `
<a
  href="#/register"
  onClick={[Function]}
/>
`;

exports[`Route testing  '/update_house' renders update house page. 1`] = `
<a
  href="#/update_house"
  onClick={[Function]}
/>
`;

exports[`Testing routing  '/' renders login page (landing). 1`] = `
<a
  href="#/"
  onClick={[Function]}
/>
`;

exports[`Testing routing  '/add_house' renders add house page. 1`] = `
<a
  href="#/add_house"
  onClick={[Function]}
/>
`;

exports[`Testing routing  '/main' renders main page. 1`] = `
<a
  href="#/main"
  onClick={[Function]}
/>
`;

exports[`Testing routing  '/register' renders registration page.' 1`] = `
<a
  href="#/register"
  onClick={[Function]}
/>
`;

exports[`Testing routing  '/update_house' renders update house page. 1`] = `
<a
  href="#/update_house"
  onClick={[Function]}
/>
`;

exports[`Testing routing '/' renders Login page (landing) 1`] = `
<a
  href="#/"
  onClick={[Function]}
/>
`;

exports[`Testing routing make sure that '/login' renders the login page correctly 1`] = `
<a
  href="#/register"
  onClick={[Function]}
/>
`;

exports[`Testing routing make sure that '/register' renders the login page correctly 1`] = `
<a
  href="#/main"
  onClick={[Function]}
/>
`;

exports[`Testing routing make sure that '/search' renders the login page correctly 1`] = `
<a
  href="#/add_house"
  onClick={[Function]}
/>
`;

exports[`Testing routing make sure that '/userprofile' renders the login page correctly 1`] = `
<a
  href="#/update_house"
  onClick={[Function]}
/>
`;
